[v#.#.#] ([month] [YYYY])
  - Upgrade to Rails 7.0.8
  - Replace unicorn with puma in production
  - Add importmap-rails to handle js libraries
  - Upgraded gems:
    - [gem]
  - Bugs fixes:
    - [entity]:
      - [future tense verb] [bug fix]
    - Bug tracker items:
      - [item]
  - New integrations:
    - [integration]
  - Integration enhancements:
    - [integration]:
      - [future tense verb] [integration enhancement]
      - [integration bug fixes]:
        - [future tense verb] [integration bug fix]
  - Reporting enhancements:
    - [report type]:
      - [future tense verb] [reporting enhancement]
  - REST/JSON API enhancements:
    - [API entity]:
      - [future tense verb] [API enhancement]
  - Security Fixes:
    - High: (Authenticated|Unauthenticated) (admin|author|contributor) [vulnerability description]
    - Medium: (Authenticated|Unauthenticated) (admin|author|contributor) [vulnerability description]
    - Low: (Authenticated|Unauthenticated) (admin|author|contributor) [vulnerability description]

v4.10.0 (September 2023)
  - Tylium: 
    - Consolidate sidebars
    - Add issue.author to liquid issue drop
  - Upgraded gems:
    - font-awesome-sass, nokogiri, puma, rails, sanitize, selenium-webdriver
  - Bugs fixes:
    - QA: Enable @mentions and formatting toolbar for comments in QA show views
  - REST/JSON API enhancements:
    - Boards, Lists, Cards: add initial implementation
  - Security Fixes:
    - Medium: Authenticated (author) broken access control: read access to system files

v4.9.0 (June 2023)
  - Tylium: Extend support for Liquid Dynamic Content
  - QA: Show state changes in activity feed
  - Upgraded gems:
    - bootstrap, popper_js, simple_form
  - Bugs fixes:
    - QA: Redirect to correct view when changing states on QA edit views
  - Integration enhancements:
    - Acunetix: Parse inline code, not just code blocks
    - Burp: Adds strong and code tags parsing
    - CSV: Fix CSV Upload for files with special characters