@@ -33,6 +33,11 @@ module LiquidEnabledResource
     authorize! :use, project
 
     result['project'] = ProjectDrop.new(project)
+    result['issues'] = project.issues.map { |issue| IssueDrop.new(issue) }
+    result['notes'] = project.notes.map { |note| NoteDrop.new(note) }
+    result['nodes'] = project.nodes.map { |node| NodeDrop.new(node) }
+    result['evidence'] = project.evidence.map { |evidence| EvidenceDrop.new(evidence) }
+    result['tags'] = project.tags.map { |tags| TagDrop.new(tags) }
 
     result
   end
