@@ -2,6 +2,7 @@
   - Upgrade to Rails 7.0.8
   - Replace unicorn with puma in production
   - Add importmap-rails to handle js libraries
+  - Add project records as available drops in liquid
   - Upgraded gems:
     - [gem]
   - Bugs fixes:
